2005-03-08  Naba Kumar  <naba@gnome.org>

	Patch from: David A Knight  <david@ritter.demon.co.uk>
	* gdl/gdl-dock-bar.[ch]: Added orientation get/set functions
	to allow for horizontal/vertical layout -- bug #155339

2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-11-04	Amanpreet Singh Alam <aalam@redhat.com>
	
	* configure.in: pa is added to ALL_LINGUAS

2004-04-02  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-10 Alastair McKinstry <mckinstry@computer.org>

	* configure.in: Added "ga" to ALL_LINGUAS.

2004-03-05  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gdl/Makefile.am: Don't install gdl-dock-item-grip.h
	
	* gdl/gdl-dock-bar.c (gdl_dock_bar_instance_init)
	(gdl_dock_bar_destroy, gdl_dock_bar_add_item): Fix memory and
	tooltip object leaks.
	
	* gdl/gdl-dock-item-grip.h:
	* gdl/gdl-dock-item-grip.c: Remove unused a11y code.  Will have to
	implement it later, but for now it clutters the source file.
	Moved stock icons initialization to class_init.
	(ensure_title_and_icon_pixbuf): Move Pango layout and pixbuf
	creation to this function.
	(gdl_dock_item_grip_expose): Simplify logic and use
	ensure_title_and_icon_pixbuf.
	(gdl_dock_item_grip_realize, gdl_dock_item_grip_size_request)
	(gdl_dock_item_grip_item_notify): Ditto
	(ellipsize_layout, gdl_dock_item_grip_size_allocate): Title
	ellipsizing code.

	* gdl/gdl-dock-item.c (gdl_dock_item_button_changed): Check for
	grip->title_window before resetting the cursor.

	* gdl/gdl-dock-object.c (gdl_dock_object_finalize): Free the
	stock_id property.

2004-03-01  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gdl/gdl-dock-master.c (gdl_dock_master_drag_motion): When
	traversing the widget hierarchy looking for a dock to request
	docking ignore those docks not belonging to ourselves.

2004-03-01  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gdl/gdl-dock-item-grip.c (gdl_dock_item_grip_expose)