@@ -59,12 +59,12 @@ gdl_dock_item_grip_get_title_area (GdlDockItemGrip *grip,
     
     pango_layout_get_pixel_size (grip->_priv->title_layout, NULL, &alloc_height);
     
+    alloc_height = MAX (grip->_priv->close_button->allocation.height, alloc_height);
+    alloc_height = MAX (grip->_priv->iconify_button->allocation.height, alloc_height);
     if (GTK_WIDGET_VISIBLE (grip->_priv->close_button)) {
-        alloc_height = MAX (grip->_priv->close_button->allocation.height, alloc_height);
         area->width -= grip->_priv->close_button->allocation.width;
     }
     if (GTK_WIDGET_VISIBLE (grip->_priv->iconify_button)) {
-        alloc_height = MAX (grip->_priv->iconify_button->allocation.height, alloc_height);
         area->width -= grip->_priv->iconify_button->allocation.width;
     }
 
@@ -181,7 +181,8 @@ gdl_dock_item_grip_item_notify (GObject    *master,
                                 gpointer    data)
 {
     GdlDockItemGrip *grip;
-
+    gboolean cursor;
+    
     grip = GDL_DOCK_ITEM_GRIP (data);
 
     if (strcmp (pspec->name, "stock_id") == 0) {
@@ -198,11 +199,13 @@ gdl_dock_item_grip_item_notify (GObject    *master,
         ensure_title_and_icon_pixbuf (grip);
 
     } else if (strcmp (pspec->name, "behavior") == 0) {
+	cursor = FALSE;
         if (grip->_priv->close_button) {
             if (GDL_DOCK_ITEM_CANT_CLOSE (grip->item)) {
                 gtk_widget_hide (GTK_WIDGET (grip->_priv->close_button));
             } else {
                 gtk_widget_show (GTK_WIDGET (grip->_priv->close_button));
+		cursor = TRUE;
             }
         }
         if (grip->_priv->iconify_button) {
@@ -210,8 +213,12 @@ gdl_dock_item_grip_item_notify (GObject    *master,
                 gtk_widget_hide (GTK_WIDGET (grip->_priv->iconify_button));
             } else {
                 gtk_widget_show (GTK_WIDGET (grip->_priv->iconify_button));
+		cursor = TRUE;
             }
         }
+	if (grip->title_window && !cursor)
+            gdk_window_set_cursor (grip->title_window, NULL);
+
     }
 }
 
@@ -400,11 +407,17 @@ gdl_dock_item_grip_realize (GtkWidget *widget)
                                               GDK_WA_NOREDIR));
 
         gdk_window_set_user_data (grip->title_window, widget);
-  
-        cursor = gdk_cursor_new_for_display (gtk_widget_get_display (widget),
+ 
+        if (GDL_DOCK_ITEM_CANT_CLOSE (grip->item))
+	    cursor = NULL;
+	else if (GDL_DOCK_ITEM_CANT_ICONIFY (grip->item))
+	    cursor = NULL;
+	else 
+	    cursor = gdk_cursor_new_for_display (gtk_widget_get_display (widget),
                                              GDK_HAND2);
         gdk_window_set_cursor (grip->title_window, cursor);
-        gdk_cursor_unref (cursor);
+	if (cursor)
+            gdk_cursor_unref (cursor);
     }
 }
 
@@ -465,20 +478,16 @@ gdl_dock_item_grip_size_request (GtkWidget      *widget,
     ensure_title_and_icon_pixbuf (grip);
     pango_layout_get_pixel_size (grip->_priv->title_layout, NULL, &layout_height);
 
-    if (GTK_WIDGET_VISIBLE (grip->_priv->close_button)) {
-        gtk_widget_size_request (grip->_priv->close_button, &child_requisition);
+    gtk_widget_size_request (grip->_priv->close_button, &child_requisition);
 
-        requisition->width += child_requisition.width;
-        layout_height = MAX (layout_height, child_requisition.height);
-    }
+    requisition->width += child_requisition.width;
+    layout_height = MAX (layout_height, child_requisition.height);
     
-    if (GTK_WIDGET_VISIBLE (grip->_priv->iconify_button)) {
-        gtk_widget_size_request (grip->_priv->iconify_button, &child_requisition);
+    gtk_widget_size_request (grip->_priv->iconify_button, &child_requisition);
 
-        requisition->width += child_requisition.width;
-        layout_height = MAX (layout_height, child_requisition.height);
-    }
-
+    requisition->width += child_requisition.width;
+    layout_height = MAX (layout_height, child_requisition.height);
+    
     requisition->height += layout_height;
 
     if (grip->_priv->icon_pixbuf) {
@@ -551,35 +560,33 @@ gdl_dock_item_grip_size_allocate (GtkWidget     *widget,
         child_allocation.x = allocation->x + allocation->width - container->border_width;
     child_allocation.y = allocation->y + container->border_width;
 
-    if (GTK_WIDGET_VISIBLE (grip->_priv->close_button)) {
-        gtk_widget_size_request (grip->_priv->close_button, &button_requisition);
+    gtk_widget_size_request (grip->_priv->close_button, &button_requisition);
 
-        if (gtk_widget_get_direction (widget) != GTK_TEXT_DIR_RTL)
-            child_allocation.x -= button_requisition.width;
+    if (gtk_widget_get_direction (widget) != GTK_TEXT_DIR_RTL)
+        child_allocation.x -= button_requisition.width;
 
-        child_allocation.width = button_requisition.width;
-        child_allocation.height = button_requisition.height;
+    child_allocation.width = button_requisition.width;
+    child_allocation.height = button_requisition.height;
 
-        gtk_widget_size_allocate (grip->_priv->close_button, &child_allocation);
+    gtk_widget_size_allocate (grip->_priv->close_button, &child_allocation);
 
-        if (gtk_widget_get_direction (widget) == GTK_TEXT_DIR_RTL)
-            child_allocation.x += button_requisition.width;
-    }
+    if (gtk_widget_get_direction (widget) == GTK_TEXT_DIR_RTL)
+        child_allocation.x += button_requisition.width;
+    
 
-    if (GTK_WIDGET_VISIBLE (grip->_priv->iconify_button)) {
-        gtk_widget_size_request (grip->_priv->iconify_button, &button_requisition);
+    gtk_widget_size_request (grip->_priv->iconify_button, &button_requisition);
 
-        if (gtk_widget_get_direction (widget) != GTK_TEXT_DIR_RTL)
-            child_allocation.x -= button_requisition.width;
+    if (gtk_widget_get_direction (widget) != GTK_TEXT_DIR_RTL)
+        child_allocation.x -= button_requisition.width;
 
-        child_allocation.width = button_requisition.width;
-        child_allocation.height = button_requisition.height;
+    child_allocation.width = button_requisition.width;
+    child_allocation.height = button_requisition.height;
 
-        gtk_widget_size_allocate (grip->_priv->iconify_button, &child_allocation);
+    gtk_widget_size_allocate (grip->_priv->iconify_button, &child_allocation);
 
-        if (gtk_widget_get_direction (widget) == GTK_TEXT_DIR_RTL)
-            child_allocation.x += button_requisition.width;
-    }
+    if (gtk_widget_get_direction (widget) == GTK_TEXT_DIR_RTL)
+        child_allocation.x += button_requisition.width;
+
     
     if (grip->title_window) {
         GdkRectangle area;
